empty message not allowing to send, heroku hosted web server fully working

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -100,7 +100,7 @@
       <section class="chat-app-form">
         <form action="" method="POST" class="chat-app-input d-flex">
           <fieldset class="form-group position-relative has-icon-left col-10 m-0">
-            <input type="text" name="message" class="form-control" placeholder="Type your message">
+            <input type="text" name="message" class="form-control" placeholder="Type your message" required="">
           </fieldset>
           <fieldset class="form-group position-relative has-icon-left col-2 m-0">
             <button type="submit" class="btn btn-info"><i class="la la-paper-plane-o d-lg-none"></i>
