--- a/templates/chat.html
+++ b/templates/chat.html
@@ -70,7 +70,7 @@
                   <div class="chat-body">
                     {% if message[3] %} <!-- if that message is an image -->
                       <div class="chat-content" style="width:20%">
-                        <a href="static/{{message[1]}}" target="_blank"><img src="{{request.url_root}}/static/{{message[1]}}" width="100%"></a>
+                        <a href="static/{{message[1]}}" target="_blank"><img src="{{request.url_root}}static/{{message[1]}}" width="100%"></a>
                       </div>
                     {% elif message[4] %} <!-- if this is a report -->
                       <div class="chat-content bg-danger bg-lighten-2">
