image error fixing v7 from js jinja2 error fixed

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -55,7 +55,7 @@
     </div>
     <div class="content-body">
       <section class="chat-app-window">
-        <div class="badge badge-default mb-1 bg-dark">Chat History <input type="hidden" id="student_id" value="{{request.path.split('/')[2]}}"><input type="hidden" id="static_url" value="{{request.{{request.url_root}}static}}"></div>
+        <div class="badge badge-default mb-1 bg-dark">Chat History <input type="hidden" id="student_id" value="{{request.path.split('/')[2]}}"><input type="hidden" id="static_url" value="{{request.url_root}}static"></div>
           <div class="chats">
             
               <!-- <div class="chat-avatar">
