--- a/templates/chat.html
+++ b/templates/chat.html
@@ -55,7 +55,7 @@
     </div>
     <div class="content-body">
       <section class="chat-app-window">
-        <div class="badge badge-default mb-1 bg-dark">Chat History <input type="hidden" id="student_id" value="{{request.path.split('/')[2]}}"><input type="hidden" id="static_url" value="{{request.url_root}}static"></div>
+        <div class="badge badge-default mb-1 bg-dark">Chat History <input type="hidden" id="student_id" value="{{request.path.split('/')[2]}}"><input type="hidden" id="static_url" value="../static"></div>
           <div class="chats">
             
               <!-- <div class="chat-avatar">
@@ -70,7 +70,7 @@
                   <div class="chat-body">
                     {% if message[3] %} <!-- if that message is an image -->
                       <div class="chat-content" style="width:20%">
-                        <a href="{{request.url_root}}static/{{message[1]}}" target="_blank"><img src="{{request.url_root}}static/{{message[1]}}" width="100%"></a>
+                        <a href="../static/{{message[1]}}" target="_blank"><img src="../static/{{message[1]}}" width="100%"></a>
                       </div>
                     {% elif message[4] %} <!-- if this is a report -->
                       <div class="chat-content bg-danger bg-lighten-2">
