--- a/templates/base.html
+++ b/templates/base.html
@@ -56,8 +56,8 @@
     <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/blockUI.min.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/jquery-sliding-menu.js') }}" type="text/javascript"></script>
     <!-- BEGIN VENDOR JS-->
-    <!-- <script src="{{ url_for('static', filename='assets/js/socket.io.js') }}" type="text/javascript"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='assets/js/socket.io.js') }}" type="text/javascript"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js" type="text/javascript"></script> -->
     <script src="{{ url_for('static', filename='assets/js/custom.js') }}" type="text/javascript"></script>
     <!-- BEGIN PAGE IMPORTED JS-->
     {% block import_scripts %}{% endblock %}
