--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
     <div class="app-content content">
       {%block content%}{%endblock%}
     </div>
+    <audio id="xyz" src="{{ url_for('static', filename='downloads/audio/iphone_text.mp3') }}" preload="auto"></audio>
     <!-- ////////////////////////////////////////////////////////////////////////////-->
 
     <!-- {% include 'footer.html' %} -->
