--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
     <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/jquery-sliding-menu.js') }}" type="text/javascript"></script>
     <!-- BEGIN VENDOR JS-->
     <script src="{{ url_for('static', filename='assets/js/socket.io.js') }}" type="text/javascript"></script>
-    <script src="https://raw.githubusercontent.com/goldfire/howler.js/master/dist/howler.min.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/js/scripts/howler.min.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='assets/js/custom.js') }}" type="text/javascript"></script>
     <!-- BEGIN PAGE IMPORTED JS-->
     {% block import_scripts %}{% endblock %}
