--- a/templates/base.html
+++ b/templates/base.html
@@ -43,10 +43,7 @@
     <div class="app-content content">
       {%block content%}{%endblock%}
     </div>
-    <audio id="messages_sound" src="{{ url_for('static', filename='downloads/audio/iphone_text.mp3') }}" preload="auto"></audio>
-    <audio id="notif_sound" src="{{ url_for('static', filename='downloads/audio/iphone_text_tone.mp3') }}" preload="auto"></audio>
-    <audio id="send_sound" src="{{ url_for('static', filename='downloads/audio/iphone_send_sms.mp3') }}" preload="auto"></audio>
-    <audio id="receive_sound" src="{{ url_for('static', filename='downloads/audio/iphone_receive_sms.mp3') }}" preload="auto"></audio>
+    <audio id="xyz" src="{{ url_for('static', filename='downloads/audio/iphone_text.mp3') }}" preload="auto"></audio>
     <!-- ////////////////////////////////////////////////////////////////////////////-->
 
     <!-- {% include 'footer.html' %} -->
@@ -61,7 +58,7 @@
     <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/jquery-sliding-menu.js') }}" type="text/javascript"></script>
     <!-- BEGIN VENDOR JS-->
     <script src="{{ url_for('static', filename='assets/js/socket.io.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='app-assets/js/scripts/howler.min.js') }}" type="text/javascript"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js" type="text/javascript"></script> -->
     <script src="{{ url_for('static', filename='assets/js/custom.js') }}" type="text/javascript"></script>
     <!-- BEGIN PAGE IMPORTED JS-->
     {% block import_scripts %}{% endblock %}
