--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,21 @@
             <li class="nav-item d-none d-md-block"><a class="nav-link nav-link-expand"><i class="ficon ft-maximize"></i></a></li>
           </ul>
           <ul class="nav navbar-nav float-right">
+            <li class="dropdown dropdown-user nav-item">
+              <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
+                <span class="mr-1">Hello,
+                  <span class="user-name text-bold-700">Administrator</span>
+                </span>
+                <span class="avatar avatar-online">
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-19.png') }}" alt="avatar"><i></i></span>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right">
+                <a class="dropdown-item" href="/students"><i class="la la-users"></i> Student Directory</a>
+                <a class="dropdown-item" href="/mass-message"><i class="la la-paper-plane"></i> Send Mass Message</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/logout"><i class="ft-power"></i> Logout</a>
+              </div>
+            </li>
             <li class="dropdown dropdown-notification nav-item">
               <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-mail"></i>
                 <span class="badge badge-pill badge-default badge-warning badge-default badge-up badge-glow" id="header-message-count">{{data['unread_students']|length}}</span>
