--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta name="description" content="Modern admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities with bitcoin dashboard.">
-    <meta name="keywords" content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
-    <meta name="author" content="PIXINVENT">
+    <meta name="description" content="Instant Notification System that allows you to send mass messages, maintaing connection with your staff members and basic chat messaging to the phone numbers">
+    <meta name="keywords" content="instant notification system, mass messaging, software engineering project, earlham college">
+    <meta name="author" content="Giorgi Kharshiladze">
     <title>{% block title %}{% endblock %} - Instant Notification System</title>
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='app-assets/images/ico/apple-icon-120.png') }}">
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='app-assets/images/ico/favicon.ico') }}">
