--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-  <meta name="description" content="Modern admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities with bitcoin dashboard.">
-  <meta name="keywords" content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
-  <meta name="author" content="PIXINVENT">
-  <title>Login with Background Color - Modern Admin - Clean Bootstrap 4 Dashboard HTML Template
-    + Bitcoin Dashboard</title>
+  <meta name="description" content="Instant Notification System that allows you to send mass messages, maintaing connection with your staff members and basic chat messaging to the phone numbers">
+    <meta name="keywords" content="instant notification system, mass messaging, software engineering project, earlham college">
+  <meta name="author" content="Giorgi Kharshiladze">
+  <title>Login - Instant Notification System</title>
   <link rel="apple-touch-icon" href="{{ url_for('static', filename='app-assets/images/ico/apple-icon-120.png') }}">
   <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='app-assets/images/ico/favicon.ico') }}">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700"
@@ -47,7 +46,9 @@ data-open="click" data-menu="vertical-menu-modern" data-col="1-column">
                 <div class="card-header border-0">
                   <div class="card-title text-center">
                     <div class="p-1">
-                      <img src="{{ url_for('static', filename='app-assets/images/logo/logo-dark.png') }}" alt="branding logo">
+                      <li class="nav-item mr-auto"><a class="navbar-brand" href="#"><img class="brand-logo" alt="modern admin logo" src="{{ url_for('static', filename='app-assets/images/logo/logo.png') }}">
+                        <br>
+                        <h2 class="brand-text">Instant Notification System</h2></a></li>
                     </div>
                   </div>
                 </div>
