tiny visual changes

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,7 +1,7 @@
 <div class="main-menu menu-fixed menu-dark menu-accordion menu-shadow" data-scroll-to-active="true">
     <div class="main-menu-content">
       <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-        <li class="{%if request.path=='/'%}active{% endif %} nav-item"><a href="/"><i class="la la-home"></i><span class="menu-title">Dashboard</span><span class="badge badge badge-info badge-pill float-right mr-2">4</span></a>
+        <li class="{%if request.path=='/'%}active{% endif %} nav-item"><a href="/"><i class="la la-home"></i><span class="menu-title">Dashboard</span></a>
         </li>
         <li class=" nav-item"><a href="#"><i class="la la-users"></i><span class="menu-title">Students</span></a>
           <ul class="menu-content">
