--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@ data-open="click" data-menu="vertical-menu-modern" data-col="1-column">
                         <input type="password" name="password" class="form-control" id="user-password" placeholder="Enter Password" required="">
                       </fieldset>
                       
-                      <button type="submit" class="btn btn-outline-info btn-block"><i class="ft-unlock"></i> Login</button>
+                      <button type="submit" class="btn btn-outline-dark btn-block"><i class="ft-unlock"></i> Login</button>
                     </form>
                   </div>
                 </div>
