--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Giorgi Kharshiladze">
   <title>Login - Instant Notification System</title>
   <link rel="apple-touch-icon" href="{{ url_for('static', filename='app-assets/images/ico/apple-icon-120.png') }}">
-  <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='app-assets/images/ico/favicon.ico') }}">
+  <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='app-assets/images/ico/favicon.png') }}"/>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700"
   rel="stylesheet">
   <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css"
