get_audience_names stayed the same

--- a/templates/register_student.html
+++ b/templates/register_student.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
+{% block import_styles%}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/vendors/css/forms/selects/select2.min.css') }}">
+{% endblock %}
 {% block body_template %}2-columns menu-expanded fixed-navbar{% endblock %}
 {% block content %}
 
@@ -20,12 +23,7 @@
 		              <h4 class="card-title" id="basic-layout-form">Project Info</h4>
 		              <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
 		              <div class="heading-elements">
-		                <ul class="list-inline mb-0">
-		                  <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
-		                  <li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
-		                  <li><a data-action="expand"><i class="ft-maximize"></i></a></li>
-		                  <li><a data-action="close"><i class="ft-x"></i></a></li>
-		                </ul>
+
 		              </div>
 		            </div>
 		            <div class="card-content collapse show">
@@ -69,57 +67,26 @@
 		                        </div>
 		                      </div>
 		                    </div>
-		                    <h4 class="form-section"><i class="la la-paperclip"></i> Requirements</h4>
-		                    <div class="form-group">
-		                      <label for="companyName">Company</label>
-		                      <input type="text" id="companyName" class="form-control" placeholder="Company Name"
-		                      name="company">
-		                    </div>
 		                    <div class="row">
-		                      <div class="col-md-6">
-		                        <div class="form-group">
-		                          <label for="projectinput5">Interested in</label>
-		                          <select id="projectinput5" name="interested" class="form-control">
-		                            <option value="none" selected="" disabled="">Interested in</option>
-		                            <option value="design">design</option>
-		                            <option value="development">development</option>
-		                            <option value="illustration">illustration</option>
-		                            <option value="branding">branding</option>
-		                            <option value="video">video</option>
-		                          </select>
-		                        </div>
-		                      </div>
-		                      <div class="col-md-6">
-		                        <div class="form-group">
-		                          <label for="projectinput6">Budget</label>
-		                          <select id="projectinput6" name="budget" class="form-control">
-		                            <option value="0" selected="" disabled="">Budget</option>
-		                            <option value="less than 5000$">less than 5000$</option>
-		                            <option value="5000$ - 10000$">5000$ - 10000$</option>
-		                            <option value="10000$ - 20000$">10000$ - 20000$</option>
-		                            <option value="more than 20000$">more than 20000$</option>
-		                          </select>
-		                        </div>
-		                      </div>
-		                    </div>
-		                    <div class="form-group">
-		                      <label>Select File</label>
-		                      <label id="projectinput7" class="file center-block">
-		                        <input type="file" id="file">
-		                        <span class="file-custom"></span>
-		                      </label>
-		                    </div>
-		                    <div class="form-group">
-		                      <label for="projectinput8">About Project</label>
-		                      <textarea id="projectinput8" rows="5" class="form-control" name="comment" placeholder="About Project"></textarea>
+		                    	<div class="col-md-12">
+		                    		<div class="form-group">
+				                      <div class="text-bold-600 font-medium-2">
+				                        Select Audience
+				                      </div>
+				                      <select class="select2-bg form-control" data-bgcolor="secondary" multiple="multiple" name="selected_audience" required>
+				                      	{% for aud, hall_name, floors in data['audience'] %}
+				                        	{% for floor in floors %}
+				                          		<option value="{{floor[0]}}">&nbsp;&nbsp;&nbsp;{{ hall_name }}, {{ floor[1] }}</option>
+				                          	{% endfor %}
+				                        {% endfor %}
+				                      </select>
+				                    </div>
+		                    	</div>
 		                    </div>
 		                  </div>
 		                  <div class="form-actions">
-		                    <button type="button" class="btn btn-warning mr-1">
-		                      <i class="ft-x"></i> Cancel
-		                    </button>
-		                    <button type="submit" class="btn btn-primary">
-		                      <i class="la la-check-square-o"></i> Save
+		                    <button type="submit" class="btn btn-dark">
+		                      <i class="la la-check-square-o"></i> Register
 		                    </button>
 		                  </div>
 		                </form>
@@ -130,4 +97,8 @@
 		</section>
     </div>
 </div>
+{% endblock %}
+{% block import_scripts %}
+<script src="{{ url_for('static', filename='app-assets/vendors/js/forms/select/select2.full.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/js/scripts/forms/select/form-select2.js') }}" type="text/javascript"></script>
 {% endblock %}
