--- a/templates/register_student.html
+++ b/templates/register_student.html
@@ -20,7 +20,7 @@
 			<div class="col-md-12 col-sm-12">
 			    <div class="card">
 		            <div class="card-header">
-		              <h4 class="card-title" id="basic-layout-form">Project Info</h4>
+		              <h4 class="card-title" id="basic-layout-form"></h4>
 		              <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
 		              <div class="heading-elements">
 
@@ -28,28 +28,20 @@
 		            </div>
 		            <div class="card-content collapse show">
 		              <div class="card-body">
-		                <div class="card-text">
-		                  <p>This is the most basic and default form having form sections.
-		                    To add form section use <code>.form-section</code> class
-		                    with any heading tags. This form has the buttons on the bottom
-		                    left corner which is the default position.</p>
-		                </div>
-		                <form class="form">
+		                <form class="form" action="/register-student" method="POST">
 		                  <div class="form-body">
-		                    <h4 class="form-section"><i class="ft-user"></i> Personal Info</h4>
+		                    <h4 class="form-section"><i class="ft-user"></i> Student Info</h4>
 		                    <div class="row">
 		                      <div class="col-md-6">
 		                        <div class="form-group">
 		                          <label for="projectinput1">First Name</label>
-		                          <input type="text" id="projectinput1" class="form-control" placeholder="First Name"
-		                          name="fname">
+		                          <input name="first" type="text" id="projectinput1" class="form-control" placeholder="First Name" required="">
 		                        </div>
 		                      </div>
 		                      <div class="col-md-6">
 		                        <div class="form-group">
 		                          <label for="projectinput2">Last Name</label>
-		                          <input type="text" id="projectinput2" class="form-control" placeholder="Last Name"
-		                          name="lname">
+		                          <input name="last" type="text" id="projectinput2" class="form-control" placeholder="Last Name" required="">
 		                        </div>
 		                      </div>
 		                    </div>
@@ -57,13 +49,13 @@
 		                      <div class="col-md-6">
 		                        <div class="form-group">
 		                          <label for="projectinput3">E-mail</label>
-		                          <input type="text" id="projectinput3" class="form-control" placeholder="E-mail" name="email">
+		                          <input type="text" id="projectinput3" class="form-control" placeholder="E-mail" name="email" required="">
 		                        </div>
 		                      </div>
 		                      <div class="col-md-6">
 		                        <div class="form-group">
 		                          <label for="projectinput4">Contact Number</label>
-		                          <input type="text" id="projectinput4" class="form-control" placeholder="Phone" name="phone">
+		                          <input type="text" id="projectinput4" class="form-control" placeholder="Phone" name="phone" required="">
 		                        </div>
 		                      </div>
 		                    </div>
@@ -71,9 +63,10 @@
 		                    	<div class="col-md-12">
 		                    		<div class="form-group">
 				                      <div class="text-bold-600 font-medium-2">
-				                        Select Audience
+				                        Address
 				                      </div>
-				                      <select class="select2-bg form-control" data-bgcolor="secondary" multiple="multiple" name="selected_audience" required>
+				                      <select class="select2-bg form-control" data-bgcolor="secondary" name="floor_id" required>
+				                      	<option value="1" disabled="" selected="">Choose the address...</option>
 				                      	{% for aud, hall_name, floors in data['audience'] %}
 				                        	{% for floor in floors %}
 				                          		<option value="{{floor[0]}}">&nbsp;&nbsp;&nbsp;{{ hall_name }}, {{ floor[1] }}</option>
@@ -84,8 +77,8 @@
 		                    	</div>
 		                    </div>
 		                  </div>
-		                  <div class="form-actions">
-		                    <button type="submit" class="btn btn-dark">
+		                  <div class="form-actions text-right">
+		                    <button type="submit" class="btn btn-secondary">
 		                      <i class="la la-check-square-o"></i> Register
 		                    </button>
 		                  </div>
