--- a/templates/register_student.html
+++ b/templates/register_student.html
@@ -55,7 +55,7 @@
 		                      <div class="col-md-6">
 		                        <div class="form-group">
 		                          <label for="projectinput4">Contact Number</label>
-		                          <input type="text" id="projectinput4" class="form-control" placeholder="Phone" name="phone" required="">
+		                          <input type="text" id="projectinput4" class="form-control" placeholder="Phone" name="phone">
 		                        </div>
 		                      </div>
 		                    </div>
