everything fully working except the about page

--- a/templates/register_student.html
+++ b/templates/register_student.html
@@ -34,13 +34,13 @@
 		                    <div class="row">
 		                      <div class="col-md-6">
 		                        <div class="form-group">
-		                          <label for="projectinput1">First Name</label>
+		                          <label for="projectinput1">First Name *</label>
 		                          <input name="first" type="text" id="projectinput1" class="form-control" placeholder="First Name" required="">
 		                        </div>
 		                      </div>
 		                      <div class="col-md-6">
 		                        <div class="form-group">
-		                          <label for="projectinput2">Last Name</label>
+		                          <label for="projectinput2">Last Name *</label>
 		                          <input name="last" type="text" id="projectinput2" class="form-control" placeholder="Last Name" required="">
 		                        </div>
 		                      </div>
@@ -48,7 +48,7 @@
 		                    <div class="row">
 		                      <div class="col-md-6">
 		                        <div class="form-group">
-		                          <label for="projectinput3">E-mail</label>
+		                          <label for="projectinput3">E-mail *</label>
 		                          <input type="text" id="projectinput3" class="form-control" placeholder="E-mail" name="email" required="">
 		                        </div>
 		                      </div>
@@ -63,7 +63,7 @@
 		                    	<div class="col-md-12">
 		                    		<div class="form-group">
 				                      <div class="text-bold-600 font-medium-2">
-				                        Address
+				                        Address *
 				                      </div>
 				                      <select class="select2-bg form-control" data-bgcolor="secondary" name="floor_id" required>
 				                      	<option value="1" disabled="" selected="">Choose the address...</option>
