--- a/templates/students.html
+++ b/templates/students.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Students{% endblock %}
 {% block import_styles %}
-<link rel="stylesheet" type="text/css" href="static/app-assets/css/core/colors/palette-tooltip.css">
-<link rel="stylesheet" type="text/css" href="static/app-assets/vendors/css/tables/datatable/datatables.min.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/css/core/colors/palette-tooltip.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/vendors/css/tables/datatable/datatables.min.css') }}">
 {% endblock %}
 {% block body_template %}2-columns menu-expanded fixed-navbar{% endblock %}
 {% block content %}
@@ -77,7 +77,7 @@
 </div>
 {% endblock %}
 {% block import_scripts %}
-<script src="static/app-assets/vendors/js/tables/datatable/datatables.min.js" type="text/javascript"></script>
-<script src="static/app-assets/js/scripts/tables/datatables/datatable-basic.js" type="text/javascript"></script>
-<script src="static/app-assets/js/scripts/tooltip/tooltip.js" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/vendors/js/tables/datatable/datatables.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/js/scripts/tables/datatables/datatable-basic.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/js/scripts/tooltip/tooltip.js') }}" type="text/javascript"></script>
 {% endblock %}
