--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
 			<div class="col-md-12 col-sm-12">
 			    <div id="with-header-border-0" class="card">
 			        <div class="card-header">
-			            <h4 class="card-title">Campus Activity</h4>
+			            <h4 class="card-title">{{data['about'][0]}}</h4>
 			            <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
 			            <div class="heading-elements">
 			                <ul class="list-inline mb-0">
@@ -27,8 +27,7 @@
 			        </div>
 			        <div class="card-content collapse show">
 			            <div class="card-body">
-			                <h4 class="card-title">Content title</h4>
-			                <p class="card-text">Content body</p>
+			                <p class="card-text">{{data['about'][1]|safe}}</p>
 			            </div>
 			        </div>
 			    </div>
