phone number format

--- a/templates/register_student.html
+++ b/templates/register_student.html
@@ -54,7 +54,7 @@
 		                      </div>
 		                      <div class="col-md-6">
 		                        <div class="form-group">
-		                          <label for="projectinput4">Contact Number</label>
+		                          <label for="projectinput4">Contact Number (Format: +12345678910)</label>
 		                          <input type="text" id="projectinput4" class="form-control" placeholder="Phone" name="phone">
 		                        </div>
 		                      </div>
